--- a/src/design/at.css
+++ b/src/design/at.css
@@ -15,7 +15,7 @@ body {
   margin: 0 auto;
   width: 11vw;
 }
-/* .modal{
+.modal{
   position: fixed;
   left:0px;
   top:0px;
@@ -27,22 +27,24 @@ body {
 .modal-content{
   width:75%;
   margin: 0 auto;
-} */
+}
 #JobForm {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+  grid-template-rows: repeat(5, 1fr);
 }
-#Description {
-  grid-column: 1/3;
-  grid-row: 2/4;
+label#DescriptionLabel{
+background-color:green;
+grid-column:3;
+grid-row:1;
 }
-#Description TextArea{
-  width:100%;
+#Description{
+  grid-column:3;
+  grid-row:2/5;
 }
 #SubmitJob {
-  grid-row: 4;
-  grid-column: 2;
+  grid-row: 5;
+  grid-column: 1/3;
 }
 .JobTable{
   position: relative;
