updated the modal function to break it out.  Now the modal is its own function, and takes hildren props

--- a/src/design/at.css
+++ b/src/design/at.css
@@ -76,19 +76,19 @@ label#DescriptionLabel {
   border-radius: 5px;
   transition: transform 2s ease-in;
 }
-.Active.PreviewCard {
+/* .Active.PreviewCard {
   position: absolute;
   top: 0;
   left: 0;
 
   background-color: brown;
-  transform: translateX(50%);
+  transform: translateX(50%); */
   /* transform: translateX(50%); */
-}
-.PreviewCard div {
+/* } */
+/* .PreviewCard div {
   width: 50%;
   margin: 0 auto;
-}
+} */
 .Display {
   display: block;
 }
