--- a/src/design/at.css
+++ b/src/design/at.css
@@ -17,7 +17,7 @@ body {
   margin: 0 auto;
   width: 11vw;
 }
-
+/*design for the modal card aspect of the application*/
 .modal {
   display: none;
   position: fixed;
@@ -25,7 +25,7 @@ body {
   top: 0px;
   width: 100%;
   height: 100%;
-  background-color: grey;
+  background-color: rgba(156, 156, 156, 0.82);
   z-index: 1;
 }
 .modal-content {
@@ -35,33 +35,61 @@ body {
   transform: translate(-50%, -50%);
   /* margin: 0 auto; */
 }
+.Display {
+  display: block;
+}
+/*style for the form to add a new job*/
 #JobForm {
-  padding: 50px 25px;
+  padding: 10px;
   background-color: white;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(5, 1fr);
+  grid-template-columns: repeat(2, auto);
+  grid-template-rows: repeat(3, auto);
   grid-gap: 15px;
+  border-radius:2%;
+  border: solid black 1px;
+  height:40vh;
+  width:60vw;
 }
-#JobForm Input {
+#JobForm Input,select {
   padding: 0px;
-  background-color: grey;
+
+  height:25px;
+}
+#LeftForm{
+  grid-row:1/5;
+  display:grid;
+  grid-template-columns: auto auto;
+  height:100%;
+}
+#LeftForm > *{
+  align-self: center;
+}
+
+#FormNotes{
+  grid-column:2;
+  display:grid;
+  grid-template-rows:1fr 8fr;
+  row-gap: 10px;
+}
+#FormNotes >textarea{
+  width:200px;
+  height:175px;
 }
 label#DescriptionLabel {
-  background-color: green;
-  grid-column: 3;
-  grid-row: 1;
+  justify-self: center;
+
 }
-#Description {
-  grid-column: 3;
-  grid-row: 2/5;
-}
-#Controls {
-  grid-row: 5;
+.Controls {
+  
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-column: 1/4;
+  
   column-gap: 15px;
+}
+#Form{
+  grid-row: 5;
+  grid-column: 1/4;
 }
 .JobTable {
   position: relative;
@@ -76,19 +104,33 @@ label#DescriptionLabel {
   border-radius: 5px;
   transition: transform 2s ease-in;
 }
-/* .Active.PreviewCard {
-  position: absolute;
-  top: 0;
-  left: 0;
-
-  background-color: brown;
-  transform: translateX(50%); */
-  /* transform: translateX(50%); */
-/* } */
-/* .PreviewCard div {
-  width: 50%;
-  margin: 0 auto;
-} */
-.Display {
-  display: block;
+/*design for the display of the cards with job information*/
+.JobCard{
+  padding:0px 10px;
+  background-color:white;
+  height:80vh;
+  width:60vw;
+  display:grid;
+  grid-template-columns: 100%;
+  grid-template-rows: repeat(9,auto);
+  grid-auto-flow: column;
+  border-radius:2%;
 }
+.JobCard > div{
+  align-self: center;
+  display:grid;
+  grid-template-columns: auto auto;
+}
+textarea{
+  height:100px;
+  width:150px;
+}
+#Company{
+  display:inline-block;
+  margin: 0 auto;
+}
+#Url{
+  grid-template-rows:auto auto;
+  grid-template-columns: 1fr;
+}
+
