--- a/src/design/at.css
+++ b/src/design/at.css
@@ -52,6 +52,7 @@ font-size: 1.3rem;
 .company{
   font-weight:800;
 }
+
 /*style for the form to add a new job*/
 #JobForm {
   padding: 10px;
@@ -116,10 +117,17 @@ label#DescriptionLabel {
 }
 .PreviewCard {
   border: 1px solid black;
+  background-color: #15CD72;
   height: 20vh;
   border-radius: 5px;
   display:grid;
   grid-template-rows: repeat(3 auto);
+}
+.declined{
+  background-color:#ED4F32;
+}
+.processing{
+  background-color: #288feb
 }
 .PreviewCard:hover{
   animation: ShadowBox .4s;
