chaned the app so that it will do an inital load of test data, only when local storage is empty.  Added a color to the job cards to indicate a job offered.

--- a/src/design/at.css
+++ b/src/design/at.css
@@ -199,6 +199,9 @@ textarea {
 .processing {
   background-color: #288feb;
 }
+.offered{
+  background-color: #EDE04D;
+}
 .PreviewCard:hover {
   animation: ShadowBox 0.4s;
   box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
