--- a/src/design/at.css
+++ b/src/design/at.css
@@ -225,6 +225,101 @@ textarea {
 .company {
   font-weight: 800;
 }
+#ResumeForm{
+  /* background-color:green; */
+}
+.AccordionHeader{
+  font-weight: bold;
+  padding: .5rem 3rem .5rem 1rem;
+}
+.AccordionContent{
+  max-height:0;
+  overflow: hidden;
+  display:grid;
+  grid-template-columns: auto auto;
+  position: relative;
+  transition: max-height .2s ease-out;
+}
+.AccordionBody{
+  padding:1rem .5rem;
+  border-top:3px solid black;
+}
+.AccordionHeader-display + .AccordionContent{
+  max-height:1000px;
+  display:grid;
+}
+
+#profileform .AccordionContent{
+  display:grid;
+  grid-template-rows:auto;
+  grid-template-columns:none;
+}
+.individualprofile{
+  display:grid;
+  grid-template-columns:auto auto;
+}
+#profileremove{
+  grid-row:1;
+  grid-column:1/3;
+  width:50%;
+}
+#basicsummarylabel{
+  grid-row:6;
+  grid-column:1/3;
+}
+.summary{
+  /* grid-row:7; */
+  grid-column:1/3;
+}
+
+.radioclass{
+  display:grid;
+  grid-template-rows: repeat(2, auto);
+  grid-template-columns: repeat(4, auto);
+grid-column: 1/3;
+}
+.radioclass span{
+  grid-column:1/5;
+}
+.AccordionContent#work{
+  grid-template-rows:auto;
+  grid-template-columns:none;
+}
+.individualwork{
+  display:grid;
+  grid-template-columns:auto auto;
+  background-color:peachpuff;
+}
+.individualwork > button:first-child{
+  grid-row:1;
+  grid-column:1/3;
+  width:50%;
+}
+#bulletsummary{
+  display:none;
+}
+#display{
+  display:block;
+}
+input[type="number"]{
+  appearance: textfield;
+}
+#addressform{
+  grid-column:1/3;
+}
+.accordion{
+  width:90%;
+  margin: 0 auto;
+  
+}
+.accordionitem{
+  margin:1rem 0;
+border:1px solid black;
+border-radius:.5rem;
+}
+#textsummary{
+  display:none;
+}
 /*animation keyframes*/
 @keyframes GrowIn {
   0% {
@@ -242,6 +337,7 @@ textarea {
     box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
   }
 }
+
 @keyframes SlideDown {
   0% {
     height: 25px;
