--- a/src/design/at.css
+++ b/src/design/at.css
@@ -241,6 +241,7 @@ textarea {
   transition: max-height .2s ease-out;
 }
 .AccordionBody{
+  display: grid;
   padding:1rem .5rem;
   border-top:3px solid black;
 }
@@ -249,22 +250,22 @@ textarea {
   display:grid;
 }
 
-#profileform .AccordionContent{
+#ProfileForm .AccordionContent{
   display:grid;
   grid-template-rows:auto;
   grid-template-columns:none;
 }
-.individualprofile{
+.IndividualProfile{
   display:grid;
   grid-template-columns:auto auto;
 }
-#profileremove{
+#ProfileRemove{
   grid-row:1;
   grid-column:1/3;
   width:50%;
 }
-#basicsummarylabel{
-  grid-row:6;
+#BasicSummaryLabel{
+  /* grid-row:6; */
   grid-column:1/3;
 }
 .summary{
@@ -272,30 +273,30 @@ textarea {
   grid-column:1/3;
 }
 
-.radioclass{
+.RadioClass{
   display:grid;
   grid-template-rows: repeat(2, auto);
   grid-template-columns: repeat(4, auto);
 grid-column: 1/3;
 }
-.radioclass span{
+.RadioClass span{
   grid-column:1/5;
 }
 .AccordionContent#work{
   grid-template-rows:auto;
   grid-template-columns:none;
 }
-.individualwork{
+.IndividualWork{
   display:grid;
   grid-template-columns:auto auto;
   background-color:peachpuff;
 }
-.individualwork > button:first-child{
+.IndividualWork > button:first-child{
   grid-row:1;
   grid-column:1/3;
   width:50%;
 }
-#bulletsummary{
+#BulletSummary{
   display:none;
 }
 #display{
@@ -304,7 +305,7 @@ grid-column: 1/3;
 input[type="number"]{
   appearance: textfield;
 }
-#addressform{
+#AddressForm{
   grid-column:1/3;
 }
 .accordion{
@@ -312,12 +313,12 @@ input[type="number"]{
   margin: 0 auto;
   
 }
-.accordionitem{
+.AccordionItem{
   margin:1rem 0;
 border:1px solid black;
 border-radius:.5rem;
 }
-#textsummary{
+#TextSummary{
   display:none;
 }
 /*animation keyframes*/
